# DiagMCfRG

./: .gitignore  DiagLoop1.txt  DiagLoop2.txt  DiagPolar1.txt  DiagPolar2.txt  DiagPolar3.txt  README.md  basis.py  callgrind.out.1385630  clear.sh  compile.sh  in00  in00.template  inlist  inlist.template  makefile  playground.ipynb  polar_eqTime.py  polar_freq.py  polar_temp.py  send.py  vertex_RG.py
Diagram/: Diag3.txt  Diag4.txt  DiagLoop1.txt  DiagPolar1.txt  DiagPolar2.txt  DiagPolar3.txt_charge  DiagPolar3.txt_spin  DiagPolar4.txt  polarization.py
diagram/: Diag4Ver1.txt  Diag4Ver2.txt  Diag4Ver3.txt  Diag4Ver4.txt  Diag5.txt  DiagLoop2.txt  DiagPolar2.txt  DiagPolar2.txt_charge  DiagPolar3.txt  DiagPolar4.txt  DiagPolar5.txt  diagram.py  free_energy.py  logger.py  main.py  polar.py  polarization.py  unionfind.py  ver4.py
groups/: DiagLoop0.txt  DiagLoop0.txt_backup  DiagLoop1.txt  DiagLoop2.txt  DiagLoop2.txt.bk  DiagLoop3.txt  DiagLoopBare1.txt  DiagLoopBare2.txt  DiagPolar1.txt  DiagPolar1_spinless.txt  DiagPolar2.txt  DiagPolar2_spinless.txt  DiagPolar3.txt  DiagPolar3_1_0.txt  DiagPolar4.txt  DiagPolar5.txt
src/: CMakeLists.txt  diagram.cpp  diagram.h  diagram_test.cpp  global.h  main.cpp  markov.cpp  markov.h  test.cpp  vertex.cpp  vertex.h  weight.cpp  weight.h  weight_DSE.cpp  weight_test.cpp
src/utility/: abort.h  convention.h  estimator.cpp  estimator.h  rng.h  rng_test.cpp  utility.cpp  utility.h  vector.h
tool/: finiteTpolar2D.nb  finiteTpolar3D.nb  fock.py
